apps/example-app-nodejs/.kustomize/quay/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: example-app-nodejs-quay
  namespace: demo-application-deployment
  labels:
    app: example-app-nodejs-quay
    app.kubernetes.io/component: example-app-nodejs-quay
    app.kubernetes.io/instance: example-app-nodejs-quay
    app.kubernetes.io/name: example-app-nodejs-quay
    app.kubernetes.io/part-of: example-app-nodejs
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-namespace: demo-application-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-app-nodejs-quay
  template:
    metadata:
      labels:
        app: example-app-nodejs-quay
        deploymentconfig: example-app-nodejs-quay
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: example-app-nodejs-quay
          image: >-
            quay.io/cestayg/example-app-nodejs:0.0.0.1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
