apps/example-app-nodejs/.kustomize/quay/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-app-nodejs-quay
  namespace: demo-application-deployment
spec:
  host: example-app-nodejs-quay-demo-application-deployment.apps.cluster-5333.5333.sandbox907.opentlc.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: example-app-nodejs-quay
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
status: {}
